# Galaga

./: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  BezierPath.cpp  BezierPath.h  CMakeLists.txt  GameEntity.cpp  GameEntity.h  GameManager.cpp  GameManager.h  Graphics.cpp  Graphics.h  Hangman.cpp  Hangman.sln  InputManager.cpp  InputManager.h  Main.cpp  MathHelper.h  README.md  Readme.md  Timer.cpp  Timer.h  Window.cpp  Window.h  Words.txt  hangman.sln
Debug/: Hangman.ilk
Entities/: AnimatedTexture.cpp  AnimatedTexture.h  GameEntity.cpp  GameEntity.h  Texture.cpp  Texture.h
Galaga/: BackgroundStars.cpp  BackgroundStars.h  Bullet.cpp  Bullet.h  Formation.cpp  Formation.h  Level.cpp  Level.h  PlayScreen.cpp  PlayScreen.h  PlaySideBar.cpp  PlaySideBar.h  Player.cpp  Player.h  ScoreBoard.cpp  ScoreBoard.h  Star.cpp  Star.h  StarLayer.cpp  StarLayer.h  StartScreen.cpp  StartScreen.h
Galaga/Enemies/: Boss.cpp  Boss.h  Butterfly.cpp  Butterfly.h  CaptureBeam.cpp  CaptureBeam.h  Enemy.cpp  Enemy.h  Wasp.cpp  Wasp.h
Hangman/: Hangman.cpp  Hangman.vcxproj  Hangman.vcxproj.filters  Header.h  Main.cpp  Window.cpp  Window.h  pch.h
Hangman/Debug/: Hangman.pch  vc141.idb
Hangman/Debug/Hangman.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Hangman.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Hangman/ExternalDependencies/SDL/lib/win32/: SDL2.lib
Levels/: Level1.xml
Managers/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  GameManager.cpp  GameManager.h  InputManager.cpp  InputManager.h  PhysicsManager.cpp  PhysicsManager.h  ScreenManager.cpp  ScreenManager.h
Physics/: BoxCollider.cpp  BoxCollider.h  CircleCollider.cpp  CircleCollider.h  Collider.cpp  Collider.h  PhysicsEntity.cpp  PhysicsEntity.h  PhysicsHelper.h
sdl-visualstudio-4244/SDL/lib/win32/: SDL2main.lib
sdl-visualstudio-4244/SDL/lib/win64/: SDL2.lib  SDL2main.lib
